[package]
name = "catibo"
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
clap = "2.33"
image = {version = "0.23", optional = true}
num-derive = "0.3"
num-traits = "0.2"
rayon = "1.3.0"
structopt = "0.3.12"
zerocopy = "0.3.0"

[features]
default = ["image"]

[profile.release]
debug = 2
