[package]
name = "catibo"
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
clap = "2.33.3"
image = { version = "0.23.9", optional = true }
num-derive = "0.3.2"
num-traits = "0.2.12"
rayon = "1.4.0"
structopt = "0.3.17"
zerocopy = "0.3.0"

[features]
default = ["image"]

[profile.release]
debug = 2
